downloads.query: parse numerical query properties as double, not int.

In r244404, we changed these from ints to doubles. However, we still
seem to parse these through Value::GetAsInteger. This always fails.
Change it to use Value::GetAsDouble instead.

BUG=617435
Test=See bug description for repro test case.

Review-Url: https://codereview.chromium.org/2092963002
Cr-Commit-Position: refs/heads/master@{#402332}

Former-commit-id: a61f420b0706b67e305cd98d0f59da32d81d0cc0